Overflow problem fix 1

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -4,6 +4,10 @@
   display: none;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 
 @keyframes fadeIn {
   from {
